# python-nixos-nspawn

./: .flake8  .gitignore  LICENSE  README.md  devtools.py  flake.nix  poetry.toml  pyproject.toml  python-nixos-nspawn.code-workspace  setup.py  shell.nix
.github/: dependabot.yml
.github/workflows/: pages.yaml
docs/: book.toml  example.nix  flake.nix
docs/src/: SUMMARY.md  cli.md  declarative.md  imperative.md  installation.md  migration.md  networking.md  upstream-tooling.md
docs/src/options/: index.md
nixos_nspawn/: __init__.py  __main__.py  constants.py  eval-container.nix  main.py  metadata.py
nixos_nspawn/commands/: __init__.py  _command.py  _shared.py  autostart.py  create.py  list.py  list_generations.py  remove.py  rollback.py  update.py
nixos_nspawn/manager/: __init__.py  manager.py
nixos_nspawn/models/: __init__.py  _printable.py  container.py  nix_generation.py
nixos_nspawn/nix/: eval-config.nix  lib.nix  sudo-nspawn.nix
nixos_nspawn/nix/containers-next/: container-builder.nix  container-options.nix  container-profile.nix  hypervisor.nix  shared.nix
nixos_nspawn/utilities/: __init__.py  command.py  unit_parser.py
tests/: main.py
tests/nix/: basic.nix  config-activation.nix  daemon-mount.nix  default.nix  imperative.nix  macvlan.nix  migration.nix  nat.nix  simple.nix  wireguard.nix
