[tool.poetry]
name = "nixos_nspawn"
version = "0.1.1"
description = "NixOS Nspawn container imperative management tool"
authors = ["Lucas Savva <lucas@m1cr0man.com>"]
license = "MIT"
readme = "README.md"
include = ["nixos_nspawn/version.txt", "nixos_nspawn/eval-container.nix"]

[tool.poetry.scripts]
nixos-nspawn = "nixos_nspawn:main_with_args"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-assertive = "^2.1.0"
flake8-bugbear = "^22.4.25"
flake8-comprehensions = "^3.9.0"
pep8-naming = "^0.12.1"
pylint = "^2.13.9"
rope = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
