[project]
name = "nixos_nspawn"
description = "NixOS Nspawn container imperative management tool"
authors = [{ name = "Lucas Savva", email = "lucas@m1cr0man.com" }]
dynamic = ["version"]
readme = "REAMDE.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["rich ~= 14.0"]

[dependency-groups]
dev = ["ruff ~= 0.11", "ty ~= 0.0.1"]

[project.scripts]
nixos-nspawn = "nixos_nspawn:main_with_args"

[tool.setuptools.packages.find]
include = ["nixos_nspawn*"]

[tool.setuptools.package-data]
"nixos_nspawn" = ["*.txt"]
"nixos_nspawn.nix" = ["*"]

[tool.setuptools.dynamic]
version = { file = ["nixos_nspawn/version.txt"] }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["dist/*", "build/*", "__pycache__", ".git", ".vscode", "*.egg-info"]

[tool.ruff.lint]
preview = true
select = ["A", "B", "C4", "CPY", "E", "F", "I", "N", "W"]
ignore = ["E203", "E501"]
